syntax = "proto3";
package agrichain;

message TaskType {
    string id = 1; // unique 3 characters
    string role = 2;
}

message ProductType {
    enum UnitOfMeasure {
        KILOS = 0;
        LITRE = 1;
        METRE = 2;
        UNIT = 3;
    }

    string id = 1;
    string name = 2;
    string description = 3;
    UnitOfMeasure measure = 4;
    repeated string derivedProductsType = 5;
}

message EventParameterType {
    enum Type {
        NUMBER = 0;
        STRING = 1;
        BYTES = 2;
        ENUM = 3;
    }

    string id = 1;
    string name = 2;
    Type type = 3;
}

message EventType {
    message EventParameterValue {
        // The type-specific value of the update. Only one of these
        // fields should be used, and it should match the type
        // specified for Parameter.Type.
        bytes bytes_value = 11;
        sint64 number_value = 13;
        string string_value = 14;
        uint32 enum_value = 15;
    }
    
    message EventParameter {
        EventParameterType parameters = 1;
        EventParameterValue value = 2;

        // Parameter Properties.
        bool required = 3;
        uint64 minValue = 4;
        uint64 maxValue = 5;
        uint64 minLength = 6;
        uint64 maxLength = 7;
    }

    string id = 1;
    string name = 2;
    string description = 3;

    repeated EventParameter parameters = 4;
}
